docs: update release notes for 3.4.1